Fixed CSS alignment and line-wrapping issue in c026r.xml
Learned that proper way to overright "content" is not 'content: "";'. Rather, it should be, "content: none". Not sure why this was causing alignment and line-wrapping issue, but it was. Nice fix.

--- a/css/custom.css
+++ b/css/custom.css
@@ -248,7 +248,7 @@ choice sic + corr:before,
 choice corr + sic:before,
 choice orig + reg:before,
 choice reg + orig:before {
-  content: "";
+  content: none;
   display:inline !important;
 }
 choice abbr + expan:after,
@@ -257,7 +257,7 @@ choice sic + corr:after,
 choice corr + sic:after,
 choice orig + reg:after,
 choice reg + orig:after {
-  content: "";
+  content: none;
   display:inline !important;
 } 
 
